Remove embedded newsletter signup forms.

--- a/_src/_templates/index.njk
+++ b/_src/_templates/index.njk
@@ -41,17 +41,7 @@
       </a>
     </h1>
   <p class="lede">Every other week I'm sharing a behind-the-scenes look at my work on <a href="https://piccalil.li/javascript-for-everyone">JavaScript for Everyone</a>, a course designed to help you take your JavaScript skills from junior- to senior-level.</p>
-  <p class="lede">Sign up here (or head over to <a href="https://piccalil.li/javascript-for-everyone#sign-up">Piccalil.li</a>) to get the next one delivered to your inbox.</p>
-  <form class="flow" action="https://piccalil.li/api/subscribe-to-stream" method="POST">
-    <label for="email" class="eyebrow">Enter your email</label>
-    <div class="sidebar">
-      <div class="input-wrap">
-        <input id="email" type="email" name="email" autocapitalize="none" autocorrect="off" required="" placeholder="email@address.com">
-      </div>
-      <button class="btn" data-button-variant="primary" type="submit"><span>Sign up</span></button>
-    </div>
-    <input type="hidden" name="stream" autocomplete="off" value="javascript-for-everyone">
-  </form>
+  <p class="lede">Sign up at <a href="https://piccalil.li/javascript-for-everyone#sign-up">Piccalil.li</a> to get the next one delivered to your inbox.</p>
   <ol reversed class="sub js4e-index">
 {% for newsletter in newsletters | newsletterSort %}
       <li class="post-head">
