--- a/_src/newsletters/index.njk
+++ b/_src/newsletters/index.njk
@@ -6,7 +6,7 @@ pagination:
 permalink: "newsletters/{{ newsletter.slug }}/"
 ---
 
-{% set title = newsletter.data.title | replace(" — JavaScript for Everyone", "") %}
+{% set title = newsletter.data.title | replace(" — JavaScript for Everyone", "") | replace(" - JavaScript for Everyone", "") %}
 {% set content = newsletter.body | markdown %}
 
 {%  set card = data.url + "/_assets/img/js4e-thumb.jpg" %}
@@ -49,17 +49,7 @@ permalink: "newsletters/{{ newsletter.slug }}/"
         <a href="https://piccalil.li/javascript-for-everyone" class="js4e-logo">
           <img src="/_assets/img/js4e-newlogo-sm.png" alt="JavaScript for Everyone">
         </a>
-        <p class="lede">If you enjoyed reading this post, sign up to get these (plus news about the course) delivered to your inbox.</p>
-        <form class="flow" action="https://piccalil.li/api/subscribe-to-stream" method="POST">
-          <label for="email" class="eyebrow">Enter your email</label>
-          <div class="sidebar">
-            <div class="input-wrap">
-              <input id="email" type="email" name="email" autocapitalize="none" autocorrect="off" required="" placeholder="email@address.com">
-            </div>
-            <button class="btn" data-button-variant="primary" type="submit"><span>Sign up</span></button>
-          </div>
-          <input type="hidden" name="stream" autocomplete="off" value="javascript-for-everyone">
-        </form>
+        <p class="lede">If you enjoyed reading this post, sign up at <a href="https://piccalil.li/javascript-for-everyone#sign-up">Piccalil.li</a> to get the next one delivered to your inbox.</p>
       </div>
     </div>
 	</div>
