--- a/_src/newsletters/index.njk
+++ b/_src/newsletters/index.njk
@@ -38,7 +38,7 @@ permalink: "newsletters/{{ newsletter.slug }}/"
         <hr>
       <h1 class="hed js4e txt-shaded">{{ title | safe | replace( " - JavaScript for Everyone", "" )}}</h1>
       {% if newsletter.data.pubDate %}
-        {% if title === "The Snows - JavaScript for Everyone" %}
+        {% if title === "The Snows" %}
         <time datetime="2026-02-12T00:00:00.000Z">Feb 12, 2026</time>
         {%  else %}
         <time datetime="{{ newsletter.data.pubDate }}">{{ newsletter.data.pubDate | formatDate }}</time>
