--- a/_src/_templates/index.njk
+++ b/_src/_templates/index.njk
@@ -46,7 +46,11 @@
 {% for newsletter in newsletters | newsletterSort %}
       <li class="post-head">
         <h2 class="hed"><a href="/newsletters/{{ newsletter.slug }}">{{ newsletter.data.title |replace(" — JavaScript for Everyone", "") | replace( " - JavaScript for Everyone", "" )}}</a></h2>
+        {% if newsletter.data.title === "The Snows - JavaScript for Everyone" %}
+        <time datetime="2026-02-12T00:00:00.000Z">Feb 12, 2026</time>
+        {%  else %}
         <time datetime="{{ newsletter.data.pubDate }}">{{ newsletter.data.pubDate | formatDate }}</time>
+        {% endif %}
       </li>
 {% endfor %}
   </ol>
